--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,11 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
-          </nav>
+            <a href="{{ site.baseurl }}/about">About Me</a>
+            <a href="{{ site.baseurl }}/projects">Projects</a>
+            <a href="{{ site.baseurl }}/career">Career Advice</a>
+            <a href="{{ site.baseurl }}/classes">Classes</a>
+</nav>
         </header>
       </div>
     </div>
