--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,7 @@
             <a href="{{ site.baseurl }}/career">Career Advice</a>
             <a href="{{ site.baseurl }}/classes">Classes</a>
             <a href="{{ site.baseurl }}/talks">Talks</a>
+            <a href="{{ site.baseurl }}/research">Research</a>
 </nav>
         </header>
       </div>
