--- a/_layouts/research.html
+++ b/_layouts/research.html
@@ -3,10 +3,12 @@ layout: default
 ---
 <article class="class">
 
-<h1>{{ title }}</h1>
+<h1>{{ page.title }}</h1>
 
+<h3>{{ page.authors }}</h2>
 
   <div class="entry">
+
     {{ content }}
   </div>
 
